web commit by http://getopenid.com/ptecza: Response

--- a/doc/banned_users/discussion.mdwn
+++ b/doc/banned_users/discussion.mdwn
@@ -5,3 +5,9 @@ whether OpenID users are stored in .ikiwiki/userdb file. --Pawel
 > OpenID users are first-class users. It's even possible to set the
 > adminuser config option to an OpenID. The preferences work the same as
 > for any other user. --[[Joey]]
+
+>> Thanks a lot for your explanation! But I have a next question :)
+>> What about password of OpenID users? I can see in Preferences
+>> page that I can change my password there. Has it a sense?
+>> After all I store my OpenID password on OpenID server and I don't
+>> want to do it on ikiwiki home page site. --Pawel
