web commit by http://getopenid.com/ptecza: Response

--- a/doc/todo/Print_link.mdwn
+++ b/doc/todo/Print_link.mdwn
@@ -11,12 +11,21 @@ for all ikiwiki pages. --Pawel
 > site that looks ugly in a printer because it's ugly anywhere, so I may
 > take some convinving. :-) Ikiwiki pages seem like they'd print out ok
 > as-is to me.
-> 
+
+>> ikiwiki home pages are plain and clean, but please note that some
+>> ikiwiki users can have their wiki with banners and navbars and a lot
+>> of graphics.
+
 > (I also often click on print links, just to get a web page that I can
 > read, especially often hoping that it will have the whole article on it,
 > instead of the 99 tiny pagelets nasty websites like to split things into.
 > Have I ever mentioned how much I *hate* the web?)
-> 
+
+>> I always print all interested articles for me, because I hate reading
+>> them from a display monitor. It's too painful for my eyes. And I want
+>> to print only article *body* without all wrappers, because I don't
+>> need them.
+
 > One option, if your stylesheet contained something that was unpalatable
 > in printing, would be to define an alternate stylesheet optimised for
 > printing, and somehow switch the browser to use that stylesheet when
@@ -25,3 +34,6 @@ for all ikiwiki pages. --Pawel
 > stylesheet on the fly without re-rendering the page..)
 >
 > --[[Joey]]
+
+>> Maybe you could add print.css file for printable version? We just have
+>> local.css file for a local styling. --Pawel
