Corrected a fuzzy. Changed some error message translation to use ": %s" same as in the English, since the %s error message probably won't be translated.

--- a/po/es.po
+++ b/po/es.po
@@ -76,9 +76,9 @@ msgid "expiring %s"
 msgstr "%s caducada"
 
 #: ../IkiWiki/Plugin/aggregate.pm:236
-#, fuzzy, perl-format
+#, perl-format
 msgid "checking feed %s ..."
-msgstr "comprobando entrada %s\t..."
+msgstr "comprobando entrada %s ..."
 
 #: ../IkiWiki/Plugin/aggregate.pm:241
 #, perl-format
@@ -299,7 +299,7 @@ msgstr "ikwiki: no puedo convertir la página %s"
 #: ../IkiWiki/Setup.pm:13
 #, perl-format
 msgid "cannot read %s: %s"
-msgstr "no puedo leer el archivo %s debido a %s"
+msgstr "no puedo leer el archivo %s: %s"
 
 #: ../IkiWiki/Setup/Standard.pm:32
 msgid "generating wrappers.."
@@ -339,7 +339,7 @@ msgstr "el programa envoltorio no ha sido especificado"
 #: ../IkiWiki/Wrapper.pm:62
 #, perl-format
 msgid "failed to write %s: %s"
-msgstr "no puedo escribir en %s debido a %s"
+msgstr "no puedo escribir en %s: %s"
 
 #: ../IkiWiki/Wrapper.pm:97
 #, perl-format
