--- a/doc/todo/Print_link.mdwn
+++ b/doc/todo/Print_link.mdwn
@@ -37,3 +37,9 @@ for all ikiwiki pages. --Pawel
 
 >> Maybe you could add print.css file for printable version? We just have
 >> local.css file for a local styling. --Pawel
+
+>>> Sure, very doable, but the UI to switch to it when printing, I don't
+>>> know..
+>>>
+>>> BTW, I'm sure that the Print link as originally requested could be
+>>> written as a plugin fairly simply. --[[Joey]]
