--- a/doc/banned_users/discussion.mdwn
+++ b/doc/banned_users/discussion.mdwn
@@ -12,8 +12,16 @@ whether OpenID users are stored in .ikiwiki/userdb file. --Pawel
 >> After all I store my OpenID password on OpenID server and I don't
 >> want to do it on ikiwiki home page site. --Pawel
 
-> This wiki is currently configured to use both passwordauth and openid, so
-> it's possible to create an account by signing in with an openid, then
-> enter a password for that account, and then log in using the openid and
-> the password. Though I can't imagine why you'd waint to do that.. The
-> password stuff goes away if passwordauth is disabled.
+>> This wiki is currently configured to use both passwordauth and openid, so
+>> it's possible to create an account by signing in with an openid, then
+>> enter a password for that account, and then log in using the openid and
+>> the password. Though I can't imagine why you'd waint to do that.. The
+>> password stuff goes away if passwordauth is disabled.
+
+>>> OK, I see it now :) The reason I can't do it (if I don't need it)
+>>> is very simple: why to put my password in two places if I can to
+>>> do it in one? ;)
+
+>>> BTW, have you had a sleep this night? ;) Here, in Poland, the time is
+>>> 1:30 PM (in your timezone is 7:30 AM), but we're just discussing for
+>>> about 3 hours... --Pawel
