web commit by http://getopenid.com/ptecza: Response

--- a/doc/translation/discussion.mdwn
+++ b/doc/translation/discussion.mdwn
@@ -85,8 +85,13 @@ translators. Thank you! :) --Pawel
 > like that? My Spanish sucks though..) In my crappy Spanish I might instead
 > say something like "actualizado MooBar de foowiki por joey". Or maybe
 > "actualizado página Moobar por joey"?
-> 
+
+>> But you know that "update of %s's %s by %s" string can be "update of
+>> foowiki's MooBar by joey", but I can only guess it :)
+
 > Anyway, to get back to your point, it's true that translators often
 > need additonal context about things like what variables expand to, and
 > size limits. This is generally done by adding comments in the pot file,
 > and I've turned that on, and added a few. --[[Joey]]
+
+>> Thank you very much! It also will be a big help for me. --Pawel
