web commit by http://getopenid.com/ptecza: How to ban an IP address?

--- a/doc/news/openid/discussion.mdwn
+++ b/doc/news/openid/discussion.mdwn
@@ -14,3 +14,12 @@ as well. Also have I just created an account on this wiki as well?
 > By signing in with openid, you have created an account on the wiki; you
 > can configure it to eg, subscribe your email address to changes to pages.
 > --[[Joey]]
+
+----
+
+# How to ban an IP address?
+
+There is a way to ban ikiwiki users, but how to ban an IP address?
+For example if a bitchy anonymous is bombing our poll. I can use
+only Apache/iptables rules for this? Maybe it's related to
+[[ACL|todo/ACL]] request? --Pawel
