--- a/doc/news/openid/discussion.mdwn
+++ b/doc/news/openid/discussion.mdwn
@@ -23,3 +23,7 @@ There is a way to ban ikiwiki users, but how to ban an IP address?
 For example if a bitchy anonymous is bombing our poll. I can use
 only Apache/iptables rules for this? Maybe it's related to
 [[ACL|todo/ACL]] request? --Pawel
+
+> Well, the polls are not something I would worry about much. I do plan to
+> [[add_IP_range_banning|spam_fighting]], although I expect to wait until
+> there's a demonstrated need. --[[Joey]]
