web commit by http://getopenid.com/ptecza: Response

--- a/doc/news/openid/discussion.mdwn
+++ b/doc/news/openid/discussion.mdwn
@@ -27,3 +27,5 @@ only Apache/iptables rules for this? Maybe it's related to
 > Well, the polls are not something I would worry about much. I do plan to
 > [[add_IP_range_banning|spam_fighting]], although I expect to wait until
 > there's a demonstrated need. --[[Joey]]
+
+>> Heh, do you really want a lot of spam of me? ;) --Pawel
