--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -265,3 +265,12 @@ The RecentChanges only shows the final file name for the recently changes file,
 for example "discussion". It would be more useful to see "index/discussion"
 or the path to the sub-page. I think this is handled by the htmllink() routine.
 
+>> IMHO it's a good idea and I like it. Often I can see changes in
+>> any discussion page, but I don't know without clicking the link
+>> what discussion was changed.
+
+>> However, I can see one problem here. You can commit via command line
+>> changes in many pages. It will be displayed ugly then, because probably
+>> a width of the RecentChanges page will be greater then a width of
+>> user's browser. I hate these pages. So I propose to display a list of
+>> changed pages in a column, not in a row. --Pawel
