web commit by http://getopenid.com/ptecza: Comment to banning IPs

--- a/doc/news/openid/discussion.mdwn
+++ b/doc/news/openid/discussion.mdwn
@@ -28,4 +28,10 @@ only Apache/iptables rules for this? Maybe it's related to
 > [[add_IP_range_banning|spam_fighting]], although I expect to wait until
 > there's a demonstrated need. --[[Joey]]
 
->> Heh, do you really want a lot of spam of me? ;) --Pawel
+>> Heh, do you really want a lot of spam of me? ;)
+
+>> It was only an example of banning reason. Recently I've read about
+>> problems of Wikipedia with the vandals from Qatar. They demolished
+>> Qatar Wikipedia pages and the admins of Wikipedia had to ban all
+>> IP addresses of that country (fortunately Qatar has only one ISP).
+>> --Pawel
