--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ ikiwiki (1.38) UNRELEASED; urgency=low
   * Corrected a bum regexp in openid munging.
   * Added a Spanish translation by Victor Moral.
   * A few translation infrastructure fixes.
+  * Added a Polish translation by Paweł Tęcza.
 
  -- Joey Hess <joeyh@debian.org>  Wed,  3 Jan 2007 13:53:55 -0500
 
