--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-ikiwiki (1.38) UNRELEASED; urgency=low
+ikiwiki (1.38) unstable; urgency=low
 
   * Corrected a bum regexp in openid munging.
   * Added a Spanish translation by Victor Moral.
   * A few translation infrastructure fixes.
   * Added a Polish translation by Paweł Tęcza.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  3 Jan 2007 13:53:55 -0500
+ -- Joey Hess <joeyh@debian.org>  Fri,  5 Jan 2007 23:13:59 -0500
 
 ikiwiki (1.37) unstable; urgency=low
 
