web commit by JeremyReed: add bsdwiki.reedmedia.net

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -34,6 +34,7 @@ Sites that are using ikiwiki include:
 * The [Sparse wiki](http://kernel.org/pub/linux/kernel/people/josh/sparse).
 * [Choffee](http://choffee.co.uk/).
 * [Tales from the Gryphon](http://www.golden-gryphon.com/blog/manoj/), Manoj Srivastava's free software blog.
+* [The BSD Associate Admin Book Project](http://bsdwiki.reedmedia.net/)
 
 Please feel free to add your own ikiwiki site!
 
