web commit by http://roktas.myopenid.com/: mention pandoc

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -144,6 +144,8 @@ Any plugins or support for exporting to LaTeX?
 >>
 >> --JeremyReed
 
+>>> Have a look at [pandoc](http://code.google.com/p/pandoc/).  It can make PDFs via pdflatex. --[[roktas]]
+
 ----
 
 # Using with CVS?
