tip o' the hat to kyle for his tip

--- a/doc/tipjar.mdwn
+++ b/doc/tipjar.mdwn
@@ -8,5 +8,6 @@ If you would like your donation listed here, let [[Joey]] know. Thanks to
 the following people for their kind contributions:
 
 * James Westby
+* Kyle S MacLea
 
 (Note that this page is locked to prevent anyone from tampering with the paypal button.)
