--- a/doc/news.mdwn
+++ b/doc/news.mdwn
@@ -1,4 +1,4 @@
-This is where announcements of new releases, features, and other news is
+This is where announcements of new releases, features, and other news are
 posted. [[IkiWikiUsers]] are recommended to subscribe to this page's RSS
 feed.
 
