--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.39) UNRELEASED; urgency=low
+
+  * Add a rawhtml plugin that allows copying raw html files from the srcdir.
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  8 Jan 2007 15:53:25 -0500
+
 ikiwiki (1.38) unstable; urgency=low
 
   * Corrected a bum regexp in openid munging.
