--- a/doc/bugs/Discussion_link_not_translated_after_page_update.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_after_page_update.mdwn
@@ -11,3 +11,6 @@ to confirm the problem. Maybe Victor Moral can do it? Probably he uses ikiwiki
 with him Spanish translation.
 
 --Pawel
+
+> Well, do you have your setup file configured to use a polish locale?
+> --[[Joey]]
