--- a/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
+++ b/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
@@ -49,3 +49,8 @@ to Bar page and next create the page. I do following steps:
 Where is my mistake?
 
 --Pawel
+
+> It's not clear which Edit link you clicked in step 5. Is it the link on
+> the new page, or the old link back on page Foo that you clicked on before
+> to create Bar? It would also be good to see the URL you're at in step 5.
+> --[[Joey]]
