web commit by http://ptecza.myopenid.com/: Response

--- a/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
+++ b/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
@@ -54,3 +54,18 @@ Where is my mistake?
 > the new page, or the old link back on page Foo that you clicked on before
 > to create Bar? It would also be good to see the URL you're at in step 5.
 > --[[Joey]]
+
+>> It was Edit link on new Bar page, of course. The URL in step 5 was
+>> http://my.host.com/wiki/ikiwiki.cgi?page=bar&do=edit.
+
+>> I've forget to add in my previous post that $pagesources{$page}
+>> (cgi_editpage subroutine of /usr/share/perl5/IkiWiki/CGI.pm file)
+>> doesn't exist in step 5. It exists after rebuilding all ikiwiki
+>> pages by hand.
+
+>> BTW, where does ikiwiki store information about rendered pages?
+>> Is it `/my/ikiwiki/src/dir/.ikiwiki/` directory?
+
+>> --Pawel
+
+
