--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 ikiwiki (1.39) UNRELEASED; urgency=low
 
   * Add a rawhtml plugin that allows copying raw html files from the srcdir.
+  * Fix --locale to control LC_ALL now.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  8 Jan 2007 15:53:25 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed, 10 Jan 2007 15:24:36 -0500
 
 ikiwiki (1.38) unstable; urgency=low
 
