--- a/doc/bugs/Discussion_link_not_translated_after_page_update.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_after_page_update.mdwn
@@ -22,3 +22,4 @@ with him Spanish translation.
 >> "Discussion" link instead of "Dyskusja" link after any page update
 >> via WWW. --Pawel
 
+>>> A setlocale issue. Now [[bugs/done]] --[[Joey]]
