* Include the pot file in the source tarball. Closes: #405890

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ ikiwiki (1.39) UNRELEASED; urgency=low
 
   * Add a rawhtml plugin that allows copying raw html files from the srcdir.
   * Fix --locale to control LC_ALL now.
+  * Include the pot file in the source tarball. Closes: #405890
 
- -- Joey Hess <joeyh@debian.org>  Wed, 10 Jan 2007 15:24:36 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed, 10 Jan 2007 15:32:48 -0500
 
 ikiwiki (1.38) unstable; urgency=low
 
