--- a/doc/translation.mdwn
+++ b/doc/translation.mdwn
@@ -3,8 +3,8 @@ essentailly three peices needed for a complete translation:
 
 1. The messages in the ikiwiki program itself need to be translated.
    Ikiwiki is internationalised, and most such messages are already marked
-   with `gettext()`. Building from source creates a `po/ikiwiki.pot` that
-   can be copied and translated as a po file. All very standard.
+   with `gettext()`. THe source tarball includes a creates a `po/ikiwiki.pot`
+   that can be copied and translated as a po file. All very standard.
 
    Note that a few things in the source are not currently translated. These
    include:
