web commit by http://ptecza.myopenid.com/: Confirmation

--- a/doc/bugs/Discussion_link_not_translated_after_page_update.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_after_page_update.mdwn
@@ -23,3 +23,5 @@ with him Spanish translation.
 >> via WWW. --Pawel
 
 >>> A setlocale issue. Now [[bugs/done]] --[[Joey]]
+
+>>>> I can confirm. Now it works :) Thanks a lot for the fix! --Pawel
