web commit by http://ptecza.myopenid.com/: Refreshing RecentChanges page

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -283,3 +283,11 @@ or the path to the sub-page. I think this is handled by the htmllink() routine.
 
 This might be a bug, but will discuss it here first.
 Clicking on an old "?" or going to a create link but new Markdown content exists, should not go into "create" mode, but should do a regular "edit".
+
+----
+
+# Refreshing RecentChanges page
+
+What do you think about refreshing RecentChanges page (via Meta Refresh Tag)?
+It can be useful for users like me which rather prefer watching the last changes
+in WWW browser tab than subscribing to page. --Pawel
