web commit by http://victormoral.myopenid.com/: Add the company where i work

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -27,6 +27,7 @@ Sites that are using ikiwiki include:
 * [LinuxWorld.com's monkey.linuxworld.com contributor wiki](https://monkey.linuxworld.com/) ([[Git]] backend)
 * [Stefano Zacchiroli's blog](http://www.bononia.it/~zack/blog/)
 * [Taquiones: Victor Moral's personal website in Spanish](http://taquiones.net)
+    * [Venexma Europa, S.L.](http://www.venexma.net): It's a small company dedicated to the distribution of shoe accessories. We use ikiwiki for development of internal applications (some areas are password protected). In spanish, of course.
 * [betacantrips, the personal website of Ethan Glasser-Camp](http://www.betacantrips.com/)
 * [Keith Packard's homepage and blog](http://keithp.com/).
 * [Christian Mock's homepage](http://www.tahina.priv.at/).
