--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -291,3 +291,14 @@ Clicking on an old "?" or going to a create link but new Markdown content exists
 What do you think about refreshing RecentChanges page (via Meta Refresh Tag)?
 It can be useful for users like me which rather prefer watching the last changes
 in WWW browser tab than subscribing to page. --Pawel
+
+----
+
+# Fall back for templatedir
+
+It would be nice if you didn't have to copy all templates to your custom _templatedir_
+so you only have your customizations there.
+And then have it fall back to the location as configured at build time (like /usr/share/ikiwiki/templates/).
+This would be similar to _underlaydir_. I don't think any extra configuration directive is needed.
+As it is now, RecentChanges will have Perl CGI error and Preferences will be an empty page, if you don't have corresponding templates.
+I can quickly make a patch and submit to the patch queue. Any comments?
