--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -78,3 +78,5 @@ This sandbox is also a [[blog]]!
 ---
 random, n.: unpredictable based on previous information. Computers tend to make do with nonrandom 
 or pseudorandom computations. See also: arbitrary, deterministic.
+
+Ethan wants to make a [[castle]] in the sand.
