web commit by http://ethan.betacantrips.com/: Ack, this was a mistake!

--- a/doc/yes/Don__39__t_like_foo.mdwn
+++ b/doc/yes/Don__39__t_like_foo.mdwn
@@ -1,1 +1,1 @@
-I don't like foo very much. Have you given life without foo a chance?
+Oops, sorry, this wasn't what I meant to happen. Please delete this page!
