web commit by http://ethan.betacantrips.com/

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -79,4 +79,4 @@ This sandbox is also a [[blog]]!
 random, n.: unpredictable based on previous information. Computers tend to make do with nonrandom 
 or pseudorandom computations. See also: arbitrary, deterministic.
 
-Ethan wants to make a [[castle]] in the sand.
+Ethan wants to make a [[sandbox/castle]] in the sand.
