web commit by http://ethan.betacantrips.com/

--- a/doc/sandbox/castle/discussion.mdwn
+++ b/doc/sandbox/castle/discussion.mdwn
@@ -1,1 +1,1 @@
-[[inline pages="discussion/* and not discussion/*/*" rootpage="sandbox/castle/discussion" show=0]]
+[[inline pages="discussion/*" rootpage="sandbox/castle/discussion"]]
