web commit by http://ethan.betacantrips.com/

--- a/doc/todo/discussion_page_as_blog.mdwn
+++ b/doc/todo/discussion_page_as_blog.mdwn
@@ -21,3 +21,5 @@ mean that a page like foo/discussion/question should have its own
 foo/discussion/question/(discussion?)/answer page? Of course, rss feeds
 don't handle threading, and of course doing this might be dependant on the
 issue above. Worrying about threading may be overkill.
+
+> Something like [[sandbox/castle]] and [[sandbox/castle/discussion]]? (Sorry about the noise, btw.) --Ethan
