web commit by http://ethan.betacantrips.com/

--- a/doc/bugs/svn_post-commit_wrapper_can__39__t_find_IkiWiki.pm_if_not_installed.mdwn
+++ b/doc/bugs/svn_post-commit_wrapper_can__39__t_find_IkiWiki.pm_if_not_installed.mdwn
@@ -14,3 +14,7 @@ look in the place it installed the libraries for its perl libraries, etc.
 
 I don't understand why the wrappers would fail if it were confgured link
 that. --[[Joey]]
+
+> I didn't install it, which was the problem. I'm running ikiwiki from a 
+> hosting account somewhere so I didn't even try. You're right, it works 
+> fine if you actually follow the directions. :) --Ethan
