--- a/doc/bugs/svn_post-commit_wrapper_can__39__t_find_IkiWiki.pm_if_not_installed.mdwn
+++ b/doc/bugs/svn_post-commit_wrapper_can__39__t_find_IkiWiki.pm_if_not_installed.mdwn
@@ -18,3 +18,5 @@ that. --[[Joey]]
 > I didn't install it, which was the problem. I'm running ikiwiki from a 
 > hosting account somewhere so I didn't even try. You're right, it works 
 > fine if you actually follow the directions. :) --Ethan
+
+Ok, well, I'll mark this [[bugs/done]] then. --[[Joey]]
