--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ ikiwiki (1.39) UNRELEASED; urgency=low
   * Fix --locale to control LC_ALL now.
   * Include the pot file in the source tarball. Closes: #405890
   * Add a Swedish translation by Daniel Nylander. Closes: #406410
+  * Add a Czech translation by Miroslav Kure.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 10 Jan 2007 22:24:25 -0500
 
