remove \n from gettexed string, and unfuzzy

--- a/po/es.po
+++ b/po/es.po
@@ -363,8 +363,8 @@ msgstr "ha fallado la compilación del programa envoltorio %s"
 #. translators: The parameter is a filename.
 #: ../IkiWiki/Wrapper.pm:108
 #, perl-format
-msgid "successfully generated %s\n"
-msgstr "creado con éxito el programa envoltorio %s\n"
+msgid "successfully generated %s"
+msgstr "creado con éxito el programa envoltorio %s"
 
 #: ../ikiwiki.in:13
 msgid "usage: ikiwiki [options] source dest"
