--- a/po/pl.po
+++ b/po/pl.po
@@ -364,8 +364,8 @@ msgstr "awaria w trakcie zestawiania strony %s"
 #. translators: The parameter is a filename.
 #: ../IkiWiki/Wrapper.pm:108
 #, perl-format
-msgid "successfully generated %s\n"
-msgstr "strona pomyślnie utworzona %s\n"
+msgid "successfully generated %s"
+msgstr "strona pomyślnie utworzona %s"
 
 #: ../ikiwiki.in:13
 msgid "usage: ikiwiki [options] source dest"
