--- a/po/sv.po
+++ b/po/sv.po
@@ -354,8 +354,8 @@ msgstr "misslyckades med att kompilera %s"
 #. translators: The parameter is a filename.
 #: ../IkiWiki/Wrapper.pm:108
 #, perl-format
-msgid "successfully generated %s\n"
-msgstr "generering av %s lyckades\n"
+msgid "successfully generated %s"
+msgstr "generering av %s lyckades"
 
 #: ../ikiwiki.in:13
 msgid "usage: ikiwiki [options] source dest"
