--- a/po/cs.po
+++ b/po/cs.po
@@ -354,8 +354,8 @@ msgstr "nelze zkompilovat %s"
 #. translators: The parameter is a filename.
 #: ../IkiWiki/Wrapper.pm:108
 #, perl-format
-msgid "successfully generated %s\n"
-msgstr "%s byl úspěšně vytvořen\n"
+msgid "successfully generated %s"
+msgstr "%s byl úspěšně vytvořen"
 
 #: ../ikiwiki.in:13
 msgid "usage: ikiwiki [options] source dest"
