web commit by JeremyReed: Response about "create" on existing

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -287,6 +287,9 @@ Clicking on an old "?" or going to a create link but new Markdown content exists
 > I belive that currently it does a redirect to the new static web page.
 > At least that's the intent of the code. --[[Joey]]
 
+>> Try at your site: `?page=discussion&from=index&do=create`
+>> It brings up an empty textarea to start a new webpage -- even though it already exists here. --reed
+
 ----
 
 # Refreshing RecentChanges page
