--- a/doc/bugs/openid_postsignin_failure.mdwn
+++ b/doc/bugs/openid_postsignin_failure.mdwn
@@ -14,3 +14,7 @@ Am I barking up the wrong tree? Maybe I'm missing something obvious?
 
 I'm running 1.38 of ikiwiki and the newest CGI::Session, Net::OpenID::Consumer, 
 Crypt::DH, URI-Fetch. --Ethan
+
+> The url must not have a setting for openid.mode or openid_identifier in
+> it. So the OpenId plugin didn't know that it was trying to log in. I
+> think this points to an issue with the OpenID server. --[[Joey]]
