web commit by http://ethan.betacantrips.com/

--- a/doc/bugs/openid_postsignin_failure.mdwn
+++ b/doc/bugs/openid_postsignin_failure.mdwn
@@ -23,3 +23,6 @@ Crypt::DH, URI-Fetch. --Ethan
 >> verification is taking place successfully. I see "openid.mode=id_res" 
 >> in the URI. On top of that, it's the same Openid server I use
 >> to sign in here on ikiwiki.kitenet.net. --Ethan
+
+>>> Yikes, I don't really have the newest CGI::Session after all.. 
+>>> let me try updating that. --Ethan
