web commit by http://ethan.betacantrips.com/

--- a/doc/bugs/openid_postsignin_failure.mdwn
+++ b/doc/bugs/openid_postsignin_failure.mdwn
@@ -26,3 +26,5 @@ Crypt::DH, URI-Fetch. --Ethan
 
 >>> Yikes, I don't really have the newest CGI::Session after all.. 
 >>> let me try updating that. --Ethan
+>>>> Sorry, I'm an idiot -- cookies disabled on my browser. Sorry to 
+>>>> waste your time.. --Ethan
