web commit by JeremyReed: provide patch

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -319,3 +319,5 @@ As it is now, RecentChanges will have Perl CGI error and Preferences will be an 
 I can quickly make a patch and submit to the patch queue. Any comments?
 
 > I'd probably accept a patch immediately. --[[Joey]]
+
+>> at [[patchqueue/fallback_for_templates]] --reed
