--- a/doc/bugs/openid_postsignin_failure.mdwn
+++ b/doc/bugs/openid_postsignin_failure.mdwn
@@ -28,3 +28,7 @@ Crypt::DH, URI-Fetch. --Ethan
 >>> let me try updating that. --Ethan
 >>>> Sorry, I'm an idiot -- cookies disabled on my browser. Sorry to 
 >>>> waste your time.. --Ethan
+
+>>>>> No problem, the error message could certianly use improvement.
+>>>>> Although if I disable cookies, myopenid lets me know. Maybe you
+>>>>> should paste the url. --[[Joey]]
