web commit by http://ptecza.myopenid.com/: Response

--- a/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
+++ b/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
@@ -105,3 +105,9 @@ Where is my mistake?
 >>>>> can write to your subversion repository? And the svn post-commit hook
 >>>>> _also_ runs as www-data? It certianly could be some permissions issue
 >>>>> that is not being reported properly. --[[Joey]]
+
+>>>>>> No, my SVN `post-commit` hook runs as `root` (uid) and `www-data` (gid).
+>>>>>> Only `root` user and `src` group have write permissions to my SVN repo.
+
+>>>>>> Could you please show me your permissions for `repodir`, `srcdir`
+>>>>>> and `destdir` and how runs your Apache server? --Pawel
